Make backend external, fix CORS for wildcard origins